--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "0.0.14",
   "scripts": {
     "start": "cd backend && npm run start",
     "code": "code ./frontend && code ./backend",
