--- a/.github/workflows/pull-request-build.yml
+++ b/.github/workflows/pull-request-build.yml
@@ -22,13 +22,35 @@ jobs:
         id: check
         run: |
           PR_COMMENT="${{ github.event.comment.body }}"
-          echo "build=$(echo "$PR_COMMENT" | grep -q '^!build$' && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
-          echo "build-linux=$(echo "$PR_COMMENT" | grep -q '^!build-linux$' && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
-          echo "build-mac=$(echo "$PR_COMMENT" | grep -q '^!build-mac$' && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
-          echo "build-win=$(echo "$PR_COMMENT" | grep -q '^!build-win$' && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
+          echo "build=$(echo "$PR_COMMENT" | grep -q '!build' && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
+          echo "build-linux=$(echo "$PR_COMMENT" | grep -q '!build-linux' && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
+          echo "build-mac=$(echo "$PR_COMMENT" | grep -q '!build-mac' && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
+          echo "build-win=$(echo "$PR_COMMENT" | grep -q '!build-win' && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
+
+  notify-build-start:
+    runs-on: ubuntu-latest
+    needs: check-command
+    if: needs.check-command.outputs.build == 'true' || needs.check-command.outputs.build-linux == 'true' || needs.check-command.outputs.build-mac == 'true' || needs.check-command.outputs.build-win == 'true'
+    outputs:
+      comment-id: ${{ steps.create_comment.outputs.comment-id }}
+    steps:
+      - name: Comment PR
+        id: create_comment
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            const { data: comment } = await github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.name,
+              body: 'Building...'
+            });
+            console.log(`Comment ID: ${comment.id}`);
+            core.setOutput('comment-id', comment.id);
 
   build-linux:
-    needs: check-command
+    needs: [check-command, notify-build-start]
     if: needs.check-command.outputs.build == 'true' || needs.check-command.outputs.build-linux == 'true'
     runs-on: ubuntu-latest
     steps:
@@ -68,37 +90,13 @@ jobs:
           cd ..
 
       - name: Upload the build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: build-linux
           path: distributables/*
 
-      - name: Comment PR
-        uses: actions/github-script@v6
-        if: success()
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const { owner, repo } = context.repo;
-            const issue_number = context.issue.number;
-
-            if (!issue_number) {
-              console.log('No issue number found. This may be a push event rather than a pull request.');
-              return;
-            }
-            try {
-              await github.rest.issues.createComment({
-                owner,
-                repo,
-                issue_number,
-                body: 'Linux build successful! [Download Linux build](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})'
-              });
-            } catch (error) {
-              console.error('Error posting comment:', error);
-            }
-
   build-mac:
-    needs: check-command
+    needs: [check-command, notify-build-start]
     if: needs.check-command.outputs.build == 'true' || needs.check-command.outputs.build-mac == 'true'
     runs-on: macos-latest
     steps:
@@ -136,37 +134,13 @@ jobs:
           cd ../../..
 
       - name: Upload the build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: build-mac
           path: distributables/*
 
-      - name: Comment PR
-        uses: actions/github-script@v6
-        if: success()
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const { owner, repo } = context.repo;
-            const issue_number = context.issue.number;
-
-            if (!issue_number) {
-              console.log('No issue number found. This may be a push event rather than a pull request.');
-              return;
-            }
-            try {
-              await github.rest.issues.createComment({
-                owner,
-                repo,
-                issue_number,
-                body: 'macOS build successful! [Download macOS build](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})'
-              });
-            } catch (error) {
-              console.error('Error posting comment:', error);
-            }
-
   build-win:
-    needs: check-command
+    needs: [check-command, notify-build-start]
     if: needs.check-command.outputs.build == 'true' || needs.check-command.outputs.build-win == 'true'
     runs-on: windows-latest
     steps:
@@ -204,66 +178,15 @@ jobs:
           cd ../../..
 
       - name: Upload the build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: build-windows
           path: distributables/*
 
-      - name: Comment PR
-        uses: actions/github-script@v6
-        if: success()
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const { owner, repo } = context.repo;
-            const issue_number = context.issue.number;
-
-            if (!issue_number) {
-              console.log('No issue number found. This may be a push event rather than a pull request.');
-              return;
-            }
-            try {
-              await github.rest.issues.createComment({
-                owner,
-                repo,
-                issue_number,
-                body: 'Windows build successful! [Download Windows build](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})'
-              });
-            } catch (error) {
-              console.error('Error posting comment:', error);
-            }
-
-  notify-build-start:
-    runs-on: ubuntu-latest
-    needs: check-command
-    if: needs.check-command.outputs.build == 'true' || needs.check-command.outputs.build-linux == 'true' || needs.check-command.outputs.build-mac == 'true' || needs.check-command.outputs.build-win == 'true'
-    steps:
-      - name: Comment PR
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const { owner, repo } = context.repo;
-            const issue_number = context.issue.number;
-
-            if (!issue_number) {
-              console.log('No issue number found. This may be a push event rather than a pull request.');
-              return;
-            }
-            try {
-              await github.rest.issues.createComment({
-                owner,
-                repo,
-                issue_number,
-                body: 'Building...'
-              });
-            } catch (error) {
-              console.error('Error posting comment:', error);
-            }
-
   notify-build-result:
     runs-on: ubuntu-latest
-    needs: [check-command, build-linux, build-mac, build-win]
+    needs:
+      [check-command, notify-build-start, build-linux, build-mac, build-win]
     if: always() && (needs.check-command.outputs.build == 'true' || needs.check-command.outputs.build-linux == 'true' || needs.check-command.outputs.build-mac == 'true' || needs.check-command.outputs.build-win == 'true')
     steps:
       - name: Check build status
@@ -275,51 +198,34 @@ jobs:
             echo "status=success" >> $GITHUB_OUTPUT
           fi
 
-      - name: Comment PR (Failure)
+      - name: Update PR Comment
         uses: actions/github-script@v6
-        if: steps.check_status.outputs.status == 'failure'
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
+            const fs = require('fs');
+            const runURL = `https://github.com/${context.repo.owner}/${context.repo.name}/actions/runs/${context.runId}`;
+
+            let body = `Build ${steps.check_status.outputs.status === 'success' ? 'Successful' : 'Failed'}!\n\nJob Run URL: ${runURL}\n\n`;
+
+            if (steps.check_status.outputs.status === 'success') {
+              const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
+                owner: context.repo.owner,
+                repo: context.repo.name,
+                run_id: context.runId
+              });
+              
+              for (const artifact of artifacts.data.artifacts) {
+                const downloadUrl = `${runURL}/artifacts/${artifact.id}`;
+                body += `[Download ${artifact.name}](${downloadUrl})\n`;
+              }
+            } else {
+              body += 'Please check the build logs for more details.';
+            }
+
+            await github.rest.issues.updateComment({
               owner: context.repo.owner,
               repo: context.repo.name,
-              body: 'Build Failed. Please check the [build logs](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) for more details.'
-            })
-            const { owner, repo } = context.repo;
-            const issue_number = context.issue.number;
-
-            if (!issue_number) {
-              console.log('No issue number found. This may be a push event rather than a pull request.');
-              return;
-            }
-            try {
-              await github.rest.issues.createComment({
-                owner,
-                repo,
-                issue_number,
-      - name: Comment PR (Success)
-        uses: actions/github-script@v6
-        if: steps.check_status.outputs.status == 'success'
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const { owner, repo } = context.repo;
-            const issue_number = context.issue.number;
-
-            if (!issue_number) {
-              console.log('No issue number found. This may be a push event rather than a pull request.');
-              return;
-            }
-
-            try {
-              await github.rest.issues.createComment({
-                owner,
-                repo,
-                issue_number,
-                body: 'Build Successful! You can download the builds from the links provided in the previous comments.'
-              });
-            } catch (error) {
-              console.error('Error posting comment:', error);
-            }
+              comment_id: ${{ needs.notify-build-start.outputs.comment-id }},
+              body: body
+            });
