--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,9 @@
   "description": "Quickly search files, applications, and run commands!",
   "main": ".webpack/main",
   "scripts": {
-    "start": "export BUILD_ENV=development && electron-forge start",
-    "package": "export BUILD_ENV=production && electron-forge package",
-    "make": "export BUILD_ENV=production && electron-forge make",
+    "start": "cross-env BUILD_ENV=development electron-forge start",
+    "package": "cross-env BUILD_ENV=production electron-forge package",
+    "make": "cross-env BUILD_ENV=production electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx ."
   },
