--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/parser": "^5.62.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
     "copy-webpack-plugin": "^12.0.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.11.0",
     "electron": "33.2.1",
     "eslint": "^8.57.1",
