--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,7 @@ jobs:
           cd ../../..
 
       - name: Upload the build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: build-${{ matrix.os }}
           path: distributables/*
@@ -124,3 +124,10 @@ jobs:
           asset_path: ./artifacts/build-macos-latest/QuickFinder.dmg
           asset_name: quickfinder-macos.dmg
           asset_content_type: application/octet-stream
+
+      - name: Delete artifacts
+        uses: geekyeggo/delete-artifact@v5
+        with:
+          name: |
+            build-ubuntu-latest
+            build-macos-latest
