--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-linux]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -51,13 +51,13 @@ jobs:
           zip -r quickfinder-linux.zip *
           cd ..
 
-      - name: Archive the build (Windows)
+      - name: Collect built distributables (Windows)
         if: matrix.os == 'windows-latest'
         run: |
           mkdir distributables
-          cd ./backend/out/make
-          powershell Compress-Archive -Path * -DestinationPath ../../../distributables/quickfinder-windows.zip
-          cd ../../..
+          cd ./backend/out/make/squirrel.windows/*
+          cp *.exe ../../../../../distributables/quickfinder-windows-installer.exe
+          cd ../../../../..
 
       - name: Collect built distributables (macOS)
         if: matrix.os == 'macos-latest'
@@ -102,7 +102,7 @@ jobs:
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: ./artifacts/build-ubuntu-latest/deb/quick-finder-amd64.deb
-          asset_name: quick-finder-amd64.deb
+          asset_name: quick-finder-amd64-installer.deb
           asset_content_type: application/vnd.debian.binary-package
 
       - name: Upload Release Asset (Ubuntu - rpm)
@@ -112,8 +112,18 @@ jobs:
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: ./artifacts/build-ubuntu-latest/rpm/quick-finder-x86_64.rpm
-          asset_name: quick-finder-x86_64.rpm
+          asset_name: quick-finder-x86_64-installer.rpm
           asset_content_type: application/x-rpm
+
+      - name: Upload Release Asset (Windows - exe)
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.get_release.outputs.upload_url }}
+          asset_path: ./artifacts/build-windows-latest/quickfinder-windows-installer.exe
+          asset_name: quickfinder-windows-installer.exe
+          asset_content_type: application/octet-stream
 
       - name: Upload Release Asset (macOS)
         uses: actions/upload-release-asset@v1
@@ -121,8 +131,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
-          asset_path: ./artifacts/build-macos-latest/QuickFinder.dmg
-          asset_name: quickfinder-macos.dmg
+          asset_path: ./artifacts/build-macos-latest/QuickFinder-installer.dmg
+          asset_name: quickfinder-macos-installer.dmg
           asset_content_type: application/octet-stream
 
       - name: Delete artifacts
