--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,14 @@
     "package": "cross-env BUILD_ENV=production electron-forge package",
     "make": "cross-env BUILD_ENV=production electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "format": "bun prettier . --write",
+    "lint": "bunx eslint",
+    "fix-lint": "bunx eslint --fix"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.6.0",
-    "@electron-forge/maker-dmg": "^7.6.0",
     "@electron-forge/maker-deb": "^7.6.0",
+    "@electron-forge/maker-dmg": "^7.6.0",
     "@electron-forge/maker-rpm": "^7.6.0",
     "@electron-forge/maker-squirrel": "^7.6.0",
     "@electron-forge/maker-zip": "^7.6.0",
@@ -46,6 +48,7 @@
   "license": "MIT",
   "dependencies": {
     "@expo/plist": "^0.2.0",
-    "electron-squirrel-startup": "^1.0.1"
+    "electron-squirrel-startup": "^1.0.1",
+    "prettier": "^3.4.2"
   }
 }
