--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "bun prettier . --write",
+    "fix-lint": "bunx eslint --fix"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
@@ -23,6 +25,7 @@
     "motion": "^11.11.17",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
+    "prettier": "^3.4.2",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-error-boundary": "^4.1.2",
