--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,30 +18,30 @@
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@uidotdev/usehooks": "^2.4.1",
     "babel-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
-    "lucide-react": "^0.460.0",
-    "motion": "^11.11.17",
-    "next": "15.0.3",
-    "next-themes": "^0.4.3",
+    "lucide-react": "0.468.0",
+    "motion": "^11.13.1",
+    "next": "15.0.4",
+    "next-themes": "^0.4.4",
     "prettier": "^3.4.2",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-error-boundary": "^4.1.2",
     "react-markdown": "^9.0.1",
     "react-rewards": "^2.0.4",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
+    "typescript": "^5.7.2",
+    "@types/node": "^20.17.9",
+    "@types/react": "^18.3.14",
+    "@types/react-dom": "^18.3.2",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.0.3"
   }
 }
