--- a/backend/package.json
+++ b/backend/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@expo/plist": "^0.2.0",
     "electron-squirrel-startup": "^1.0.1",
+    "electron-store": "^10.0.0",
     "prettier": "^3.4.2"
   }
 }
