--- a/backend/package.json
+++ b/backend/package.json
@@ -50,6 +50,7 @@
   "license": "MIT",
   "dependencies": {
     "@expo/plist": "^0.2.0",
+    "ajv": "^8.17.1",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.0",
     "prettier": "^3.4.2"
