--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quick-finder",
   "productName": "QuickFinder",
-  "version": "0.1.0",
+  "version": "0.0.19",
   "description": "Quickly search files, applications, and run commands!",
   "main": ".webpack/main",
   "scripts": {
@@ -34,6 +34,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.11.0",
     "electron": "33.2.1",
+    "electron-datastore": "^1.2.0",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.31.0",
     "fork-ts-checker-webpack-plugin": "^7.3.0",
